dist/atuin/Deployment.atuin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: atuin
  name: atuin
  namespace: atuin
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: atuin-atuin-deployment-c8aa6d7f
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: atuin
        app.kubernetes.io/name: atuin
        cdk8s.io/metadata.addr: atuin-atuin-deployment-c8aa6d7f
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - start
          image: ghcr.io/atuinsh/atuin
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8888
          name: atuin
          ports:
            - containerPort: 8888
            - containerPort: 9001
              name: metrics
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8888
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
