dist/atuin/Service.atuin.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
spec:
  externalIPs: []
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    cdk8s.io/metadata.addr: atuin-atuin-deployment-c8aa6d7f
  type: ClusterIP
