dist/atuin/Ingress.atuin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/instance: atuin
  name: atuin
  namespace: atuin
spec:
  rules:
    - host: atuin.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: atuin
                port:
                  number: 8888
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - atuin.cmdcentral.xyz
      secretName: atuin-tls
